# basic_http_server

./: CompileProject.sh  Makefile.am  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  clientsocket.c  clientsocket.h  common.h  httpreqhandler.c  httpreqhandler.h  main.c  options.c  options.h  prthread.c  prthread.h  serversocket.c  serversocket.h  sock_def.h  stdmgmt.c  stdmgmt.h
src-client/: Makefile.am  httphandler.c  httphandler.h  main.c  sock_def.h  stdmgmt.c
