bin_PROGRAMS = http-server

AM_CPPFLAGS = -lpthread

http_server_SOURCES = \
	clientsocket.c \
	clientsocket.h \
	common.h \
	httpreqhandler.c \
	httpreqhandler.h \
	main.c \
	options.c \
	options.h \
	prthread.c \
	prthread.h \
	serversocket.c \
	serversocket.h \
	sock_def.h \
	stdmgmt.c \
	stdmgmt.h


http_server_LDADD = -lpthread

http_server_LDFLAGS = 
